# obot-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/obot-core/: Cargo.toml
crates/obot-core/src/: benchmark.rs  current.rs  foc.rs  hall.rs  host.rs  lib.rs  outer_loop.rs  output.rs  power.rs  text_api.rs  timing.rs
crates/obot-protocol/: Cargo.toml
crates/obot-protocol/src/: lib.rs  usb_control.rs
docs/: repo-layout.md  rust-hardware-benchmark.md
firmware/obot-g474/: Cargo.toml  build.rs  link.x
firmware/obot-g474/src/: adc.rs  clock.rs  cycle_counter.rs  debug_report.rs  driver.rs  drv8323s.rs  hall.rs  led.rs  lib.rs  main.rs  memory.rs  pwm.rs  startup.rs  usb.rs
tools/obot-bench-debug/: Cargo.toml  README.md
tools/obot-bench-debug/src/: main.rs
