[workspace]
resolver = "3"
members = [
    "crates/obot-core",
    "crates/obot-protocol",
    "firmware/obot-g474",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "git@github.com:bingjeff/obot-rs.git"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
std_instead_of_core = "deny"
