[package]
name = "obot-bench-debug"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
repository = "git@github.com:bingjeff/obot-rs.git"
rust-version = "1.95"

[dependencies]
obot-core = { path = "../../crates/obot-core" }
obot-protocol = { path = "../../crates/obot-protocol" }


[lints.rust]
unsafe_code = "allow"

[lints.clippy]
alloc_instead_of_core = "allow"
std_instead_of_core = "allow"
